# ResiliSSH

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  index.html  package-lock.json  package.json
scripts/: fix_icon.py
src/: main.ts  style.css  theme.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: checkpoint.rs  download_checkpoint.rs  history.rs  lib.rs  main.rs  profiles.rs  retry.rs  ssh_config.rs  stall.rs  storage.rs
src-tauri/src/sftp/: browse.rs  client.rs  download.rs  mod.rs  upload.rs
