[package]
name = "sshutil"
version = "1.0.0"
description = "ResiliSSH — macOS SFTP upload/download with weak-network resume"
authors = ["cabbage"]
edition = "2021"

[lib]
name = "sshutil_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
thiserror = "2"
log = "0.4"
dirs = "6"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
